# automatic-ppm-criterion-highlight-system

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: app.py  config.py
app/crud/: __init__.py  drill.py  feedback.py  mail.py  ppm.py  prediction.py  tqm.py  user.py
app/database/: __init__.py  mssql.py  mysql.py  redis.py
app/models/: __init__.py  mssql_models.py  mysql_models.py
app/routes/: __init__.py  drill.py  feedback.py  mail.py  ppm.py  user.py
app/schemas/: __init__.py  api.py  drill.py  feedback.py  feedback_schemas.py  mail.py  mailer_schemas.py  ppm.py  predcition.py  predcition_schemas.py  user.py
app/services/: email_service.py  prediction_service.py  soap_service.py  tqm_service.py
app/utils/: data_transfer.py  logger.py  redis_helper.py  response_helper.py
