[project]
name = "automatic-ppm-criterion-highlight-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "aioredis==2.0.1",
    "anyio==3.6.2",
    "asttokens==3.0.0",
    "async-generator==1.10",
    "async-timeout==4.0.2",
    "asyncmy==0.2.10",
    "attrs==22.1.0",
    "certifi==2022.12.7",
    "cffi==1.15.1",
    "charset-normalizer==3.0.1",
    "click==8.1.3",
    "colorama==0.4.6",
    "dotenv==0.9.9",
    "et-xmlfile==1.1.0",
    "exceptiongroup==1.0.4",
    "executing==2.2.0",
    "fastapi==0.87.0",
    "fastapi-utils==0.2.1",
    "greenlet==2.0.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.27.1",
    "icecream==2.1.4",
    "idna==3.4",
    "importlib-metadata==5.0.0",
    "iniconfig==1.1.1",
    "numpy==1.21.6",
    "openpyxl==3.0.10",
    "outcome==1.2.0",
    "packaging==21.3",
    "pandas==1.3.5",
    "pluggy==1.0.0",
    "py==1.11.0",
    "pycparser==2.21",
    "pydantic==1.10.2",
    "pygments==2.19.2",
    "pymysql==1.0.2",
    "pyodbc==4.0.34",
    "pyparsing==3.0.9",
    "pytest==7.2.0",
    "pytest-asyncio==0.20.3",
    "pytest-html==3.2.0",
    "pytest-metadata==2.0.4",
    "pytest-trio==0.8.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.1.1",
    "pytz==2022.6",
    "requests==2.28.2",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sortedcontainers==2.4.0",
    "sqlalchemy==1.4.44",
    "starlette==0.21.0",
    "tomli==2.0.1",
    "trio==0.22.0",
    "typing-extensions==4.4.0",
    "urllib3==1.26.14",
    "uvicorn==0.19.0",
    "zipp==3.10.0",
]
